# A.O.A.I-Anti-Orwellian-Artificial-Intelligence

./: .gitignore  CONTRIBUTING.md  LICENSE  MAKEFILE  Makefile  README.md  pyproject.toml  sbom.json
browser_extension/: README.md  background.js  content.js  manifest.json  popup.html  popup.js
browser_extension/browser_extension/: background.js
browser_extension/browser_extension/browser_extension/: content.js
browser_extension/browser_extension/browser_extension/browser_extension/: manifest.json
browser_extension/browser_extension/browser_extension/browser_extension/browser_extension/: popup.html
browser_extension/browser_extension/browser_extension/browser_extension/browser_extension/browser_extension/: popup.js
browser_extension/browser_extension/browser_extension/browser_extension/browser_extension/browser_extension/configs/: demo.yaml
configs/: demo.yaml
data/: knowledge_pack.json
docs/: CHANGELOG.md  alpha_access_nda.md  brand_trademark_pack.md  commercial_license_tiers.md  deployment_roadmap.md  investor_one_pager.md  k_math_security_module.md  press_release_launch_kit.md  private_owners_manual.md  public_safe_release.md  user_bill_of_rights.md  whitepaper.md
docs/templates/: letterhead_template.md  press_release_template.md
government_package/: README.md  cover_letter_template.md  privacy_impact_assessment.md  safety_case.md
src/aoai/: __init__.py  audit.py  cli.py  config.py  k_math.py  license.py  lsa.py  media.py  truth_engine.py
tests/: test_audit.py  test_k_math.py  test_truth_engine.py
(+5 files in other folders)
